# lamindb-setup

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml  doc-changes.yml  latest-changes.yml
docs/: api.md  changelog.md  index.md  notebooks.md  reference.md  test_notebooks.py
docs/faq/: 1-switch-environment.ipynb  check-synchronization.ipynb  clone.ipynb  edge-cases-login-init.ipynb  index.md  manage-migrations.ipynb  migrate-manage.ipynb  migrate.ipynb  multi-session.ipynb  switch-environment.ipynb  test-migrations-e2e.ipynb  test-migrations-unit.ipynb  test-sqlite-sync.ipynb  validate-init-args.ipynb
docs/guide/: 00-index.ipynb  01-init-instance.ipynb  01-setup-user.ipynb  02-init-instance.ipynb  02-load-instance.ipynb  02-setup-instance.ipynb  03-load-instance.ipynb  03-set-storage.ipynb  04-schema-modules.ipynb  04-set-storage.ipynb  05-schema-modules.ipynb  06-delete.ipynb  06-info.ipynb  06-migrate.ipynb  07-delete.ipynb  07-info.ipynb  08-clone.ipynb  08-load.ipynb  09-delete.ipynb  1-setup-user.ipynb  10-delete.ipynb  2-setup-instance.ipynb  3-schema-modules.ipynb  3-set-storage.ipynb  4-edge-cases.ipynb  4-schema-modules.ipynb  5-edge-cases.ipynb  5-migrate-sqlite.ipynb  5-migrate.ipynb  6-migrate-postgres.ipynb  6-migrate.ipynb  6-set-storage.ipynb  6-switch-environment.ipynb  7-clone-sqlite.ipynb  7-clone.ipynb  7-dynamic-settings.ipynb  7-info.ipynb  7-set-storage.ipynb  8-clone-postgres.ipynb  8-load.ipynb  (+13 more)
docs/guides/: configure.ipynb  edge-cases.ipynb  index.md  schema-modules.ipynb  setup-instance.ipynb  setup-user.ipynb
docs/hub-cloud/: 01-init-local-instance.ipynb  01-init-on-prem-instance.ipynb  02-connect-local-instance.ipynb  02-connect-on-prem-instance.ipynb  03-add-managed-storage.ipynb  03-set-storage.ipynb  03-test-init-cloud-with-db.ipynb  04-fail-managed-storage.ipynb  04-test-bionty.ipynb  05-init-hosted-instance.ipynb  06-connect-hosted-instance.ipynb  06-init-hosted-instance.ipynb  06-load-hosted-instance.ipynb  07-connect-hosted-instance.ipynb  07-connect-hybrid-instance.ipynb  07-keep-artifacts-local.ipynb  08-init-hosted-instance-custom-storage.ipynb  08-test-multi-session.ipynb  09-test-init-paths.ipynb  09-test-migrate.ipynb  09-test-multi-session.ipynb  test-multi-session.ipynb  test_notebooks.py
docs/hub-prod/: test-cache-management.ipynb  test-cloud-sync.ipynb  test-connect-anonymously-set-token.ipynb  test-connect-anonymously.ipynb  test-empty-init.ipynb  test-import-schema.ipynb  test-init-load-local-anonymously.ipynb  test-insufficient-user-info.ipynb  test-invalid-schema.ipynb  test-load-anonymously.ipynb  test-load-lock.ipynb  test-sqlite-lock.ipynb  test-sqlite-sync.ipynb
docs/notes/: index.md  multiple-sign-ups-same-email.ipynb
docs/one-env/: test-empty-init.ipynb  test-import-schema.ipynb
docs/prod-only/: test-cache-management.ipynb  test-empty-init.ipynb  test-import-schema.ipynb  test-insufficient-user-info.ipynb  test-invalid-schema.ipynb  test-load-anonymously.ipynb  test-load-lock.ipynb  test-sqlite-sync.ipynb
docs/prod-staging/: 01-init-instance.ipynb  01-init-on-prem-instance.ipynb  02-init-hosted-instance.ipynb  02-load-instance.ipynb  03-set-storage.ipynb  04-schema-modules.ipynb  04-set-storage.ipynb  04-test-bionty.ipynb  05-init-hosted-instance.ipynb  06-load-hosted-instance.ipynb  test-multi-session.ipynb
docs/tutorials/: quickstart.ipynb
docs/two-envs/: 01-init-instance.ipynb  02-load-instance.ipynb  03-set-storage.ipynb
lamindb_setup/: __init__.py  __main__.py  _add_remote_storage.py  _cache.py  _check.py  _check_instance_setup.py  _check_setup.py  _close.py  _connect_instance.py  _delete.py  _deploy_server.py  _disconnect.py  _django.py  _docstrings.py  _entry_points.py  _entrypoints.py  _export.py  _exportdb.py  _import_export_db.py  _importdb.py  _info.py  _init_instance.py  _init_vault.py  _load_instance.py  _manage_cache.py  _merge.py  _migrate.py  _notebook.py  _register_instance.py  _schema.py  _schema_metadata.py  _schema_metadata_legacy.py  _set.py  _set_managed_storage.py  _settings.py  _setup_user.py  _silence_loggers.py  errors.py  io.py  lazy_import.py  (+1 more)
lamindb_setup/_migrate/: __init__.py  core.py  deploy.py  env.py  utils.py
lamindb_setup/core/: __init__.py  _aws_credentials.py  _aws_options.py  _aws_storage.py  _clone.py  _deprecated.py  _docs.py  _hub_client.py  _hub_core.py  _hub_crud.py  _hub_utils.py  _private_django_api.py  _prune_django_api.py  _s3_move.py  _s3_transfer.py  _schema.py  _settings.py  _settings_instance.py  _settings_load.py  django.py  (+12 more)
lndb/: __init__.py  __main__.py  _check_instance_setup.py  _check_versions.py  _clone.py  _close.py  _delete.py  _info.py  _init_instance.py  _load_instance.py  _migrate.py  _notebook.py  _register_instance.py  _schema.py  _set.py  _settings.py  _settings_instance.py  _settings_load.py  _settings_save.py  _settings_store.py  _settings_user.py  _setup_knowledge.py  _setup_schema.py  _setup_user.py
lndb_cli/: __init__.py  __main__.py  _check_versions.py  _db.py  _hub.py  _load.py  _schema.py  _settings.py  _settings_load.py  _settings_store.py  _setup.py
lndb_setup/: __init__.py  __main__.py  _check_versions.py  _clone.py  _close.py  _db.py  _delete.py  _exclusion.py  _hub.py  _info.py  _init_instance.py  _integrity.py  _load.py  _load_instance.py  _migrate.py  _migrations.py  _nox_tools.py  _prepare_schema.py  _schema.py  _set.py  _settings.py  _settings_instance.py  _settings_load.py  _settings_save.py  _settings_store.py  _settings_user.py  _setup_instance.py  _setup_knowledge.py  _setup_schema.py  _setup_storage.py  _setup_user.py  _storage.py  _test_instances.py  _test_migrate.py  _upath_ext.py
scripts/: recreate_lamin_db_gz.py
tests/: test_base.py  test_bionty.py  test_dynamic_settings.py  test_get_db_from_vault.py  test_init_instance.py  test_init_instance_vault.py  test_load_instance.py  test_load_persistent_instance.py  test_migrate.py  test_notebooks.py  test_set_storage.py  test_storage_access.py  test_vault.py
(+177 files in other folders)
