[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamindb_setup"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "lnschema_core>=0.51.0",
    "lamin_utils>=0.3.3",
    # External dependencies
    "django>4.2,<4.3.0",
    "dj_database_url>=1.3.0,<3.0.0",
    "pydantic[dotenv]<2.0.0",
    "appdirs<2.0.0",
    "python-dateutil<3.0.0",
    "universal_pathlib==0.1.4",  # is still experimental, need pinning
    "botocore<2.0.0",
    "supabase==2.2.1",
]

[project.urls]
Home = "https://github.com/laminlabs/lamindb-setup"

[project.optional-dependencies]
aws = [
    "s3fs",
]
erdiagram = [
    "django-schema-graph",
]
dev = [
    "pyjwt<3.0.0",
    "psycopg2-binary",
    "python-dotenv",
    "nox",
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "nbproject-test>=0.4.3",
    "pandas",
    "sqlmodel==0.0.9",  # try to work around this
    "lamin_vault",
]
hub = [
    "faker",
]

[tool.black]
preview = true
