[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamindb_setup"
requires-python = ">=3.10"
authors = [{name = "Lamin Labs", email = "open-source@lamin.ai"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "lamin_utils>=0.3.3",
    # External dependencies
    "django>=5.1,<5.2",
    "dj_database_url>=1.3.0,<3.0.0",
    "pydantic-settings",
    "appdirs<2.0.0",
    "requests",
    "universal_pathlib==0.2.6",  # is still experimental, need pinning
    "botocore<2.0.0",
    "supabase>=2.8.1,<2.12.0", # from 2.8.1 has correct lower bounds on gotrue
    "gotrue<2.12.0", # supabase doesn't have this upper bound
    "storage3!=0.11.2; python_version < '3.11'", # 0.11.2 breaks python 3.10 through usage of new types
    "pyjwt<3.0.0", # needed to decode jwt for sign in with the new api key
    "psutil",
    "packaging"
]

[project.urls]
Home = "https://github.com/laminlabs/lamindb-setup"

[project.optional-dependencies]
aws = [
    "urllib3<2", # for botocore, TODO: check that really required
    "aiobotocore[boto3]>=2.5.4,<3.0.0",
    # exclude 2024.10.0 due to https://github.com/fsspec/s3fs/pull/910
    "s3fs>=2023.12.2,<=2025.3.2,!=2024.10.0"
]
gcp = [
    "gcsfs>=2023.12.2,<=2025.3.2"
]
erdiagram = [
    "django-schema-graph",
]
dev = [
    "line_profiler",
    "psycopg2-binary",
    "python-dotenv",
    "nox",
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "nbproject-test>=0.4.3",
    "pandas",
]

[tool.ruff]
src = ["src"]
line-length = 88
lint.select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
    "TCH",  # Typing imports
    "NPY",  # Numpy specific rules
    "PTH"  # Use pathlib
]
lint.ignore = [
    # this needs to be refactored as we dropped 3.9
    # todo: refactor types and remove this
    "UP007",
    # Do not catch blind exception: `Exception`
    "BLE001",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # line too long -> we accept long comment lines; black gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public module
    "D100",
    # undocumented-public-class
    "D101",
    # Missing docstring in public method
    "D102",
    # Missing docstring in public function
    "D103",
    # Missing docstring in public package
    "D104",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # Missing docstring in public nested class
    "D106",
    # Missing docstring in __init__
    "D107",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # 1 blank line required after class docstring
    "D204",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    # We want docstrings to start immediately after the opening triple quote
    "D213",
    # Section underline is over-indented ("{name}")
    "D215",
    # First line should end with a period
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    # First word of the first line should be capitalized: {} -> {}
    "D403",
    # First word of the docstring should not be "This"
    "D404",
    # Section name should end with a newline ("{name}")
    "D406",
    # Missing dashed underline after section ("{name}")
    "D407",
    # Section underline should be in the line following the section's name ("{name}")
    "D408",
    # Section underline should match the length of its name ("{name}")
    "D409",
    # No blank lines allowed between a section header and its content ("{name}")
    "D412",
    # Missing blank line after last section ("{name}")
    "D413",
    # Missing argument description
    "D417",
    # Imports unused
    "F401",
    # camcelcase imported as lowercase
    "N813",
    # module import not at top level of file
    "E402",
    # open()` should be replaced by `Path.open()
    "PTH123",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I", "B018", "B017"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]
